[package]
name = "macrothree"
version = "0.1.0"
authors = ["Matthias Derer <matthias.derer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.0-alpha.14"
rodio = "0.13.0"

[replace]
"macroquad:0.3.0-alpha.14" = { git = "https://github.com/not-fl3/macroquad", branch="master"}